tests/ui/abi3_nativetype_inheritance.stderr
error[E0277]: pyclass `PyDict` cannot be subclassed
 --> tests/ui/abi3_nativetype_inheritance.rs:5:19
  |
5 | #[pyclass(extends=PyDict)]
  |                   ^^^^^^ required for `#[pyclass(extends=PyDict)]`
  |
  = help: the trait `PyClassBaseType` is not implemented for `PyDict`
  = note: `PyDict` must have `#[pyclass(subclass)]` to be eligible for subclassing
  = note: with the `abi3` feature enabled, PyO3 does not support subclassing native types
  = help: the trait `PyClassBaseType` is implemented for `PyAny`
note: required by a bound in `PyClassImpl::BaseType`
 --> src/impl_/pyclass.rs
  |
  |     type BaseType: PyTypeInfo + PyClassBaseType;
  |                                 ^^^^^^^^^^^^^^^ required by this bound in `PyClassImpl::BaseType`

error[E0277]: pyclass `PyDict` cannot be subclassed
 --> tests/ui/abi3_nativetype_inheritance.rs:5:1
  |
5 | #[pyclass(extends=PyDict)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ required for `#[pyclass(extends=PyDict)]`
  |
  = help: the trait `PyClassBaseType` is not implemented for `PyDict`
  = note: `PyDict` must have `#[pyclass(subclass)]` to be eligible for subclassing
  = note: with the `abi3` feature enabled, PyO3 does not support subclassing native types
  = help: the trait `PyClassBaseType` is implemented for `PyAny`
  = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)
